# Multiagent-travel-planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  setup_bq.py  start_cloud_run.sh  start_mcp.py
agent/: __init__.py  cli.py  config.py  graph.py  guardrails.py  itinerary.py  nodes.py  prompts.py  state.py  tools.py
agent/agents/: __init__.py  data_fetcher.py  orchestrator.py  planner.py
backend/: main.py
frontend/: README.md  index.html  package-lock.json  package.json  referenc.txt
frontend/src/: App.jsx  styles.css
frontend/src/components/: AgentTimeline.jsx  DayPlanner.jsx  GlobePanel.jsx  LogisticsPanel.jsx  PromptComposer.jsx  TripOverview.jsx
frontend/src/lib/: api.js  formatters.js
mcp_server/: tools.yaml
